eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetapp-service
spec:
  selector:
    app: budgetapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
