eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgetapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.budget-api.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: budgetapi-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.budget-api.com
      secretName: budget-api-cert
